--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.faendir.maven</groupId>
     <artifactId>resource-class-generator</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
     <name>resource-class-generator</name>
     <scm>
         <connection>scm:git:git://github.com:F43nd1r/resource-class-generator.git</connection>
         <developerConnection>scm:git:git@github.com:F43nd1r/resource-class-generator.git</developerConnection>
         <url>https://github.com/F43nd1r/resource-class-generator</url>
-        <tag>1.0.2</tag>
+        <tag>HEAD</tag>
     </scm>
     <properties>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
