add maven central required stuff

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.faendir.maven</groupId>
     <artifactId>resource-class-generator</artifactId>
     <version>1.0.3-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
     <name>resource-class-generator</name>
+    <description>Creates a class with constants for all resources in a bundle</description>
+    <url>https://github.com/F43nd1r/resource-class-generator</url>
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <id>f43nd1r</id>
+            <name>Lukas Morawietz</name>
+        </developer>
+    </developers>
     <scm>
         <connection>scm:git:git://github.com:F43nd1r/resource-class-generator.git</connection>
         <developerConnection>scm:git:git@github.com:F43nd1r/resource-class-generator.git</developerConnection>
