--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.faendir.maven</groupId>
     <artifactId>resource-class-generator</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.3</version>
     <packaging>maven-plugin</packaging>
     <name>resource-class-generator</name>
     <description>Creates a class with constants for all resources in a bundle</description>
@@ -26,7 +25,7 @@
         <connection>scm:git:git://github.com:F43nd1r/resource-class-generator.git</connection>
         <developerConnection>scm:git:git@github.com:F43nd1r/resource-class-generator.git</developerConnection>
         <url>https://github.com/F43nd1r/resource-class-generator</url>
-        <tag>HEAD</tag>
+        <tag>1.0.3</tag>
     </scm>
     <properties>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
