--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.faendir.maven</groupId>
     <artifactId>resource-class-generator</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.1</version>
     <packaging>maven-plugin</packaging>
     <name>resource-class-generator</name>
     <description>Creates a class with constants for all resources in a bundle</description>
@@ -25,7 +25,7 @@
         <connection>scm:git:git://github.com:F43nd1r/resource-class-generator.git</connection>
         <developerConnection>scm:git:git@github.com:F43nd1r/resource-class-generator.git</developerConnection>
         <url>https://github.com/F43nd1r/resource-class-generator</url>
-        <tag>HEAD</tag>
+        <tag>1.1.1</tag>
     </scm>
     <properties>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
